# research_code

./: README.md  RawWaveformTowerBuilder.cc  RawWaveformTowerBuilder.h
CloneWars2/: Fun4All_Template.C
CloneWars2/src/: CaloInfo.cc  CaloInfo.h  CaloInfoLinkDef.h  ClonesContainer.cc  ClonesContainer.h  ClonesContainerLinkDef.h  Makefile.am  Makefile.in  SaveCAtoNode.cc  SaveCAtoNode.h  SaveCAtoNodeLinkDef.h  TowerAccessor.cc  TowerAccessor.h  TowerInfo.cc  TowerInfo.h  TowerInfoContainer.cc  TowerInfoContainer.h  configure  configure.ac
CloneWars2/src/autom4te.cache/: output.0  output.1  traces.1
RawWaveformTowerBuilder/macro/: Fun4All_TowerBuilder.C  sample_already2.root  testoutput_simfile.root
RawWaveformTowerBuilder/src/autom4te.cache/: traces.1
john_noise/: loopJohnWtree.C  loopJohnWtree.h  radped.C  savLoopJohn.C
john_noise/NOISE_1/: noise11.csv  noise_one.csv
john_noise/NOISE_2/: noise10.csv  noise10_24K.csv  noise11_24K.csv  noise24.csv  noise24_24K.csv  noise24_27_24K.csv  noise25.csv  noise25_24K.csv  noise26.csv  noise26_24K.csv  noise27.csv  noise27_24K.csv  noise40.csv  noise40_24K.csv  noise40_43_24K.csv  noise41.csv  noise41_24K.csv  noise42.csv  noise42_24K.csv  noise43.csv  noise43_24K.csv  noise56.csv  noise56_24K.csv  noise56_59_24K.csv  noise57.csv  noise57_24K.csv  noise58.csv  noise58_24K.csv  noise59.csv  noise59_24K.csv  noise8.csv  noise8_11_24K.csv  noise8_24K.csv  noise9.csv  noise9_24K.csv
macro/: sample_already.root  sample_already3.root
src/: CaloTowerBuilder.cc  CaloTowerBuilder.h  Makefile.am  Makefile.in  configure
src/autom4te.cache/: output.0  output.1
